# clig

./: .gitignore  .prettierrc.json  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: api_reference.md
docs/sphinx/source/: api_reference.md  comparisons.md  conf.py  convert_notebook.py  docstrings_templates.md  get_templates.py  index.md  process_notebook.py
docs/sphinx/source/notebooks/: advancedfeatures.ipynb  advancedfeatures.md  example.py  example0.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  gen_expl_up_notebook.py  generate_examples_update_notebook.py  subcommands.ipynb  subcommands.md  userguide.ipynb  userguide.md  write_examples.py
src/clig/: clig.py
tests/: conftest.py  functions.py  functions_to_test.py  resource_functions.py  resources.py  test_add_parsers.py  test_argparse_examples.py  test_argparse_examples_01.py  test_argument_data.py  test_docstrings.py  test_example_argparse_type.py  test_examples_clig_advanced_features.py  test_examples_clig_subcommands.py  test_examples_clig_userguide.py  test_get_argdata_from_parameter.py  test_get_data_from_argtype.py  test_get_docstring_data.py  test_get_inferred_docstring_data_with_templates.py  test_get_inferred_docstring_data_without_templates.py  test_help_subcommands.py  test_helpmodifiers.py  test_inferarg.py  test_intg_00_data_flag_help.py  test_intg_00_randon.py  test_intg_01_Literal_Enum_Color.py  test_intg_02_commands.py  test_intg_03_convert_union.py  test_intg_04_command_without_args.py  test_intg_05_subcommands_options.py  test_intg_06_groups.py  test_intg_07_nargs.py  test_intg_08_tuple.py  test_intg_09_pos_with_default.py  test_intg_09_pos_with_default_nargsplus.py  test_intg_10_list_int.py  test_intg_11_12.py  test_intg_13.py  test_intg_99_descriptionepilogmodifier.py  test_intg_actionAppend.py  test_intg_choices_Enum.py  (+27 more)
tests/decorators/: test_func_decorators.py
tests/erros/: test_runtime_errors.py
tests/helps/: test_print_help.py
tests/integration/: test_argspec_nargs.py  test_intg_list_tuple_union.py  test_intg_nargs_spec.py  test_intg_variadic_args.py  test_subparsers_with_same_parameters.py
