[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clig"
version = "0.0.0"
description = "Command Line Interface Generator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/Diogo-Rossi/clig"
Issues = "https://github.com/Diogo-Rossi/clig/issues"
Source = "https://github.com/Diogo-Rossi/clig"

[tool.pytest.ini_options]
addopts = "-rx -vv -s --tb=short"

[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "jupyter>=1.1.1",
    "myst-parser>=4.0.1",
    "pytest>=8.4.2",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
doc = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Run pytest" }
