[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clig"
version = "0.6.1"
description = "Command Line Interface Generator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/diogo-rossi/clig"
Issues = "https://github.com/diogo-rossi/clig/issues"
Source = "https://github.com/diogo-rossi/clig"

[tool.pytest.ini_options]
addopts = "-rx -vv -s --tb=short"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "black>=26.1.0",
]
test = [
    "gitpython>=3.1.45",
    "pillow>=12.1.1",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
]
docs = [
    "furo>=2025.9.25",
    "gitpython>=3.1.45",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "myst-parser>=4.0.1",
    "pymdown-extensions>=10.20.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxnotes-comboroles>=1.0",
]

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs with sphinx" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open sphinx docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }
examples = { cmd = "python generate_examples_update_notebook.py", cwd = "./docs/sphinx/source/notebooks", help = "Generate examples" }
notebook = { cmd = "python convert_notebook.py", cwd = "./docs/sphinx/source", help = "Convert notebook" }
