[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clig"
version = "0.12.0"
description = "Command Line Interface Generator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://clig.readthedocs.io/en/latest/"
Issues = "https://github.com/diogo-rossi/clig/issues"
Source = "https://github.com/diogo-rossi/clig"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "black>=26.1.0",
]
test = [
    "gitpython>=3.1.45",
    "pillow>=12.1.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
]
docs = [
    "furo>=2025.9.25",
    "gitpython>=3.1.45",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "myst-parser>=4.0.1",
    "pymdown-extensions>=10.20.1",
    "pyprj>=0.15.0",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-mathjax-offline>=0.0.2",
    "sphinxnotes-comboroles>=1.0",
]

[tool.pytest]
addopts = [
    "-rx",        # Show extra test summary (r): (x)failed
    "-vv",        # Increase verbosity
    "-s",         # Shortcut for --capture=no (Per-test capturing method)
    "--tb=short", # Traceback print mode = short
]

[tool.black]
line-length = 110

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./docs/sphinx", help = "Make docs with sphinx" }
open = { cmd = "index.html", cwd = "./docs/sphinx/build/html", help = "Open sphinx docs" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest" }
build = { cmd = "uv build", cwd = ".", help = "Test with uv" }
publish = { cmd = "uv publish", cwd = ".", help = "Publish with uv" }
